force-app/main/default/objects/ConfiguracaoBotDeployAutomationAny__mdt/ConfiguracaoBotDeployAutomationAny__mdt.object-meta.xml
<CustomObject>
    <description>Configuração para chamada da api Bot Deploy do Automation Anywhere</description>
    <label>Configuração Bot Deploy Automation Any</label>
    <pluralLabel>Configurações Bot Deploy Automation Any</pluralLabel>
</CustomObject>