force-app/main/default/objects/ConfiguracaoBotDeployAutomationAny__mdt/fields/AmbienteExecucao__c.field-meta.xml
<CustomField>
    <fullName>AmbienteExecucao__c</fullName>
    <description>Ambiente de execução da requisição</description>
    <inlineHelpText>Ambiente de execução da requisição</inlineHelpText>
    <label>Ambiente de execução</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>