force-app/main/default/objects/ConfiguracaoBotDeployAutomationAny__mdt/fields/EmailTo__c.field-meta.xml
<CustomField>
    <fullName>EmailTo__c</fullName>
    <description>Emails para receber envio da requisição</description>
    <inlineHelpText>Emails para receber envio da requisição</inlineHelpText>
    <label>Email To</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>