force-app/main/default/objects/ConfiguracaoBotDeployAutomationAny__mdt/fields/FileId__c.field-meta.xml
<CustomField>
    <fullName>FileId__c</fullName>
    <description>Mapeia para o campo file id da integração, que identifica o processo a ser realizado</description>
    <inlineHelpText>Mapeia para o campo file id da integração, que identifica o processo a ser realizado</inlineHelpText>
    <label>File Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>