force-app/main/default/objects/ConfiguracaoBotDeployAutomationAny__mdt/fields/RunAsUserIds__c.field-meta.xml
<CustomField>
    <fullName>RunAsUserIds__c</fullName>
    <description>Mapeia para a propriedade de mesmo nome na integração, recebe ids divididos por vírgula</description>
    <inlineHelpText>Mapeia para a propriedade de mesmo nome na integração, recebe ids divididos por vírgula</inlineHelpText>
    <label>Run as User Ids</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>