force-app/main/default/objects/ConfiguracaoBotDeployAutomationAny__mdt/fields/URIRequisicao__c.field-meta.xml
<CustomField>
    <fullName>URIRequisicao__c</fullName>
    <description>URI da requisição</description>
    <inlineHelpText>URI da requisição</inlineHelpText>
    <label>URI da requisição</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>