force-app/main/default/objects/ConfiguracaoBotDeployAutomationAny__mdt/fields/UsarFaturamentoID__c.field-meta.xml
<CustomField>
    <fullName>UsarFaturamentoID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se na integração o campo a ser passado deve ser p_strFaturamentoID (true) ou p_strIdFaturamento (false)</description>
    <inlineHelpText>Indica se na integração o campo a ser passado deve ser p_strFaturamentoID (true) ou p_strIdFaturamento (false)</inlineHelpText>
    <label>Usar Faturamento ID</label>
    <type>Checkbox</type>
</CustomField>